phase2_Dev/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Observation__c</fullName>
        <description>Observation field is used to store Licensor&apos;s observations on the citation</description>
        <inlineHelpText>EEC resource who intakes the case would fill this out with his/her own observation</inlineHelpText>
        <label>Observation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Home_Study__c</fullName>
        <description>Original Home Study date?</description>
        <inlineHelpText>Original Home Study date?</inlineHelpText>
        <label>Original Home Study</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_How__c</fullName>
        <inlineHelpText>How was this other person notified?</inlineHelpText>
        <label>How</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_When__c</fullName>
        <inlineHelpText>When was this other person notified?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified_Who__c</fullName>
        <inlineHelpText>Who else was notified?</inlineHelpText>
        <label>Who</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Notified__c</fullName>
        <inlineHelpText>Was anyone else notified?</inlineHelpText>
        <label>Other Person Notified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Relationship__c</fullName>
        <inlineHelpText>Please enter the relationship you have with the provider</inlineHelpText>
        <label>Other Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Email_Template_To_Send__c</fullName>
        <label>Out Of Office Email Template To Send</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Initial_Recipient_ID__c</fullName>
        <description>In case we need to forward email to the supervisor in case of out of office, this field will contain the ID of the initial recipient.</description>
        <label>Out Of Office Initial Recipient ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <inlineHelpText>What is the best way to contact you?</inlineHelpText>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_Family_Child_Care__c</fullName>
        <description>Does Foster Parent also provide Family Child Care?</description>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Provide Family Child Care</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Address_For_Email_Merge__c</fullName>
        <description>Calculate the provider name depending if it&apos;s licensed or unlicensed. This is used for merging with email.</description>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)),  IF(Unlicensed_Provider_Street__c=&quot;&quot;, &quot;&quot;, Unlicensed_Provider_Street__c &amp; &quot;, &quot;) &amp;   Unlicensed_Provider_City__r.Name  &amp; &quot;, MA &quot; &amp;  Unlicensed_Provider_Zip_Code__c ,  Provider_Address__c )</formula>
        <label>Provider Address For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address__c</fullName>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)), &quot;&quot; , Account.Provider_Address_1__c  &amp; IF(Account.Provider_Address_2__c=&quot;&quot;, &quot;&quot;, &quot;, &quot; &amp;  Account.Provider_Address_2__c) &amp; &quot;, &quot; &amp;   Account.Provider_City__r.Name  &amp; &quot;, &quot; &amp;  TEXT(Account.State__c) &amp; &quot; &quot; &amp;  Account.Provider_Zip_Code__c)</formula>
        <label>Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Closed_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag to make sure the user has been reminded that he/she has created a case on a closed provider.</description>
        <label>Provider Closed Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Hidden__c</fullName>
        <description>Populates from Provider_Email (which is a formula field) into this field so it can be used in email alerts.</description>
        <label>Provider Email (Hidden)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <formula>Account.Provider_Email__c</formula>
        <label>Provider Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_For_Email_Merge__c</fullName>
        <description>Calculate the provider name depending if it&apos;s licensed or unlicensed. This is used for merging with email.</description>
        <formula>IF( OR(ISNULL(AccountId), ISBLANK(AccountId)),  Unlicensed_Provider_Name__c ,  Account.Name )</formula>
        <label>Provider Name For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Provider Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Status__c</fullName>
        <formula>TEXT(Account.Provider_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Issue_Known__c</fullName>
        <inlineHelpText>How do you know about this situation?</inlineHelpText>
        <label>Reason Issue Known</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Detailed_Investigation__c</fullName>
        <inlineHelpText>Fill this field if you request Regional Director and Deputy Commissioner review in order to have this case investigated by an investigator</inlineHelpText>
        <label>Reason for Detailed Investigation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_to_Report_Now__c</fullName>
        <inlineHelpText>If your concerns happened more than a month ago, what is prompting you to contact EEC at this time?</inlineHelpText>
        <label>Reason to Report Now</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Phone__c</fullName>
        <description>Field used in Email Template</description>
        <formula>IF( ISBLANK(AccountId), Unlicensed_Provider_Region__r.Phone__c , Account.Region__r.Phone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field used in Email Template</inlineHelpText>
        <label>Region Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_provider__c</fullName>
        <inlineHelpText>Relationship of the case reporter to the provider</inlineHelpText>
        <label>Relationship to provider</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR&amp;R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider&apos;s Own Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Self Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other state agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerned Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDC System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Information Alert</inlineHelpText>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendCaseTriageEmail__c</fullName>
        <description>Flag to indicate that a case triage email should be sent.</description>
        <label>SendCaseTriageEmail</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_with_Parents__c</fullName>
        <inlineHelpText>Was this information shared with the child&apos;s parent / guardian?</inlineHelpText>
        <label>Shared with Parents</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_with_Provider__c</fullName>
        <inlineHelpText>Have your shared your concerns with the provider?</inlineHelpText>
        <label>Shared with Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Home__c</fullName>
        <label>Status of Home</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Allegation__c</fullName>
        <inlineHelpText>EEC licensor would fill this out before sending to triage. This should provide suggestions to Triage Responsible.</inlineHelpText>
        <label>Summary of Allegation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Event_Occured__c</fullName>
        <description>If this is related to a specific event, when did this occur?</description>
        <label>Time Event Occured</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriageDueDate__c</fullName>
        <formula>TODAY() + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriageDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TriageEscalationApproverEmailList__c</fullName>
        <description>The list of the most recent approvers of  a case triage escalation.</description>
        <label>TriageEscalationApproverEmailList</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triage_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User that will be / is / was in charge of the triage.</inlineHelpText>
        <label>Triage Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TriggerTriageEscalationApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that will trigger an escalation in approvals for In Triage to Escalated for the Case object.</description>
        <label>TriggerTriageEscalationApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Name__c</fullName>
        <description>Name of the provider in case of unlicensed provider</description>
        <label>Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Phone__c</fullName>
        <label>Provider Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Region</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Licensing Region (currently a subsidy region is selected)</errorMessage>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Street__c</fullName>
        <label>Provider Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Zip_Code__c</fullName>
        <label>Provider Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Child_Return__c</fullName>
        <inlineHelpText>When did the child return to your program?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Shared_Info__c</fullName>
        <inlineHelpText>When was this information shared with the child&apos;s parent / guardian?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Shared_with_Provider__c</fullName>
        <description>When was the information shared (date or estimated date)</description>
        <inlineHelpText>When was the information shared (date or estimated date)</inlineHelpText>
        <label>When Shared with Provider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_Shared_Info__c</fullName>
        <inlineHelpText>Who shared the information with the parent / guardian?</inlineHelpText>
        <label>Who</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Shared_with_Provider__c</fullName>
        <description>Who did you share the information with (name)</description>
        <inlineHelpText>Who did you share the information with (name)</inlineHelpText>
        <label>Who Shared with Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_who__c</fullName>
        <inlineHelpText>Provide the name of the parent / guardian who was contacted</inlineHelpText>
        <label>With who</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Approver_Email_Address__c</fullName>
        <description>Email address of the 1st level approver on escalated investigations. Will be used to send email alerts on rejected approvals on triage escalation approval process</description>
        <label>1st Escalation Approver Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Case_Approver_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Escalation Case Approver Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 1st Level escalation approver on cases</description>
        <inlineHelpText>Denotes the user that will be the 1st Level escalation approver on cases</inlineHelpText>
        <label>1st Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Lvl1_Escalation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Escalation_Case_Approver_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Escalation Case Approver Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 2nd Level escalation approver on cases</description>
        <inlineHelpText>Denotes the user that will be the 2nd Level escalation approver on cases</inlineHelpText>
        <label>2nd Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Lvl2_Escalation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X911_By_whom__c</fullName>
        <inlineHelpText>By whom was 911 called?</inlineHelpText>
        <label>By whom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X911_Called__c</fullName>
        <inlineHelpText>Was 911 called?</inlineHelpText>
        <label>911 Called</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X911_called_when__c</fullName>
        <inlineHelpText>When was 911 called?</inlineHelpText>
        <label>When</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>CasesInTriageForMe</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Unlicensed_Provider_Name__c</columns>
        <columns>Unlicensed_Provider_Street__c</columns>
        <columns>Unlicensed_Provider_City__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Triage</value>
        </filters>
        <filters>
            <field>Assigned_to_Me_For_Triage__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases In Triage For Me</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>MyProvOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Is_My_Provider__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Provider Cases - Open Case with Inv.</label>
    </listViews>
    <listViews>
        <fullName>MyRegionOpenCasesNoProv</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Unlicensed_Provider_Name__c</columns>
        <columns>Unlicensed_Provider_Street__c</columns>
        <columns>Unlicensed_Provider_City__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Attached_To_Unlicensed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region - Open Cases with Unlcd Prov.</label>
    </listViews>
    <listViews>
        <fullName>MyRegionOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region - Open Case with Investigation</label>
    </listViews>
    <listViews>
        <fullName>MyTeamOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Assigned_To_Me_Or_My_Subordinates__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team - Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyTeamOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Assigned_To_Me_Or_My_Subordinates__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team - Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
</CustomObject>